<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MegaTuner</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start">Start</string>
    <string name="btnStart">Start</string>
    <string name="btnStop">Stop</string>
    <string name="showSpectrum">Spectrum</string>
    <string name="showSignal">Signal</string>
    <string name="buttonClose">X</string>
    <string name="graphics">Graphics</string>
    <string name="addionalview">Additional View</string>
    <string name="exit">Exit</string>
    <string name="opengl">OpenGL</string>
    <string name="draw2d">2D graphics</string>
    <string name="show_signal">Signal</string>
    <string name="show_spectrum">Spectrum</string>
    <string name="show_nothing">Nothing</string>
    <string name="show_tuner">Tuner</string>
    <string name="tune_settings">Tune Settings</string>
    <string name="harmonic_suppression">Harmonic Suppression</string>
    <string name="averaging">Averaging</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="octave">Octave</string>
    <string name="octBig">Big</string>
    <string name="octSmall">Small</string>
    <string name="oct1">1</string>
    <string name="oct2">2</string>
    <string name="oct3">3</string>
    <string name="oct4">4</string>
    <string name="oct5">5</string>
    <string name="octNone">None</string>
    <string name="use_first_harmonic">Use First Harmonic</string>
    <string name="sync_by_max">Synchronize by Max</string>
    <string name="frequency_control">Frequency Control</string>


</resources>