<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/action_graphics"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/graphics">

        <menu>
            <group android:checkableBehavior="all">
            <item
                android:id="@+id/action_opengl"
                android:title="@string/opengl"/>
            <item
                android:id="@+id/action_draw2d"
                android:title="@string/draw2d"/>
            </group>
        </menu>
       
    </item>
    <item
        android:id="@+id/action_show"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="View">

        <menu>
            <group android:checkableBehavior="all">
            <item
                android:id="@+id/action_showtuner"
                android:title="@string/show_tuner"/>
            <item
                android:id="@+id/action_showsignal"
            	android:title="@string/show_signal"/>
            <item
                android:id="@+id/action_showspectrum"
                android:title="@string/show_spectrum"/>
            <item
                android:id="@+id/action_shownothing"
                android:title="Spectrum and Signal"/>
            </group>
        </menu>
    </item>
    <item
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/tune_settings">

        <menu>
            <group android:checkableBehavior="all">
            <item
                android:id="@+id/harmonic_suppression"
            	android:title="@string/harmonic_suppression"/>
            <item
                    android:id="@+id/use_first_harmonic"
                    android:title="@string/use_first_harmonic"/>
            <item
                    android:id="@+id/sync_by_max"
                    android:title="@string/sync_by_max"/>
            <item
                android:id="@+id/averaging"
                android:title="@string/averaging"/>
            <item
                android:id="@+id/frequency_control"
                android:title="@string/frequency_control"/>
            </group>
        </menu>
    </item>
    <item
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/octave">

        <menu>
            <group android:checkableBehavior="all">
                <item
                        android:id="@+id/octNone"
                        android:title="@string/octNone"/>
                <item
                        android:id="@+id/octBig"
                        android:title="@string/octBig"/>
                <item
                        android:id="@+id/octSmall"
                        android:title="@string/octSmall"/>
                <item
                        android:id="@+id/oct1"
                        android:title="@string/oct1"/>
                <item
                        android:id="@+id/oct2"
                        android:title="@string/oct2"/>
                <item
                        android:id="@+id/oct3"
                        android:title="@string/oct3"/>
                <item
                        android:id="@+id/oct4"
                        android:title="@string/oct4"/>
                <item
                        android:id="@+id/oct5"
                        android:title="@string/oct5"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_exit"
        android:title="@string/exit">
    </item>

</menu>